P2/main/parser/y.output
Terminals unused in grammar

    LETFCURLYBRACKET
    RIGHTCURLYBRACKET
    BOOL
    UNDEFINED


State 129 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: stmtlist

    2 stmtlist: ε
    3         | stmtlist stmt
    4         | stmtlist error

    5 stmt: SEMICOLON
    6     | asgn SEMICOLON
    7     | print SEMICOLON
    8     | read SEMICOLON
    9     | if
   10     | while
   11     | for_stmt
   12     | repeat
   13     | do_while
   14     | clear_screen
   15     | place
   16     | switch_stmt

   17 controlSymbol: ε

   18 if: IF controlSymbol exp THEN stmtlist END_IF
   19   | IF controlSymbol exp THEN stmtlist ELSE stmtlist END_IF

   20 while: WHILE controlSymbol exp DO stmtlist END_WHILE

   21 for_stmt: FOR controlSymbol VARIABLE FROM exp TO exp DO stmtlist END_FOR
   22         | FOR controlSymbol VARIABLE FROM exp TO exp STEP exp DO stmtlist END_FOR

   23 repeat: REPEAT controlSymbol stmtlist UNTIL exp SEMICOLON

   24 do_while: DO controlSymbol stmtlist WHILE exp SEMICOLON

   25 clear_screen: CLEAR_SCREEN SEMICOLON

   26 place: PLACE LPAREN exp COMMA exp RPAREN SEMICOLON

   27 switch_stmt: SWITCH LPAREN exp RPAREN case_list END_SWITCH
   28            | SWITCH LPAREN exp RPAREN case_list DEFAULT stmtlist END_SWITCH

   29 case_list: case_list CASE exp stmtlist
   30          | CASE exp stmtlist

   31 asgn: VARIABLE ASSIGNMENT exp
   32     | VARIABLE ASSIGNMENT asgn
   33     | INCREMENTO VARIABLE
   34     | DECREMENTO VARIABLE
   35     | VARIABLE INCREMENTO
   36     | VARIABLE DECREMENTO
   37     | VARIABLE MAS_IGUAL exp
   38     | VARIABLE MENOS_IGUAL exp
   39     | CONSTANT ASSIGNMENT exp
   40     | CONSTANT ASSIGNMENT asgn

   41 print: PRINT exp

   42 read: READ LPAREN VARIABLE RPAREN
   43     | READ LPAREN CONSTANT RPAREN
   44     | READ_STRING LPAREN VARIABLE RPAREN

   45 exp: NUMBER
   46    | STRING
   47    | exp PLUS exp
   48    | exp MINUS exp
   49    | exp MULTIPLICATION exp
   50    | exp DIVISION exp
   51    | exp DIV_ENTERA exp
   52    | LPAREN exp RPAREN
   53    | PLUS exp
   54    | MINUS exp
   55    | exp MODULO exp
   56    | exp POWER exp
   57    | VARIABLE
   58    | CONSTANT
   59    | BUILTIN LPAREN listOfExp RPAREN
   60    | exp GREATER_THAN exp
   61    | exp GREATER_OR_EQUAL exp
   62    | exp LESS_THAN exp
   63    | exp LESS_OR_EQUAL exp
   64    | exp EQUAL exp
   65    | exp NOT_EQUAL exp
   66    | exp AND exp
   67    | exp OR exp
   68    | NOT exp
   69    | exp CONCAT exp
   70    | exp '?' exp ':' exp

   71 listOfExp: ε
   72          | exp restOfListOfExp

   73 restOfListOfExp: ε
   74                | COMMA exp restOfListOfExp


Terminals, with rules where they appear

    $end (0) 0
    ':' (58) 70
    '?' (63) 70
    error (256) 4
    SEMICOLON (258) 5 6 7 8 23 24 25 26
    COMMA (259) 26 74
    LPAREN (260) 26 27 28 42 43 44 52 59
    RPAREN (261) 26 27 28 42 43 44 52 59
    PLUS (262) 47 53
    MINUS (263) 48 54
    MULTIPLICATION (264) 49
    DIVISION (265) 50
    GREATER_THAN (266) 60
    LESS_THAN (267) 62
    GREATER_OR_EQUAL (268) 61
    LESS_OR_EQUAL (269) 63
    PRINT (270) 41
    READ (271) 42 43
    READ_STRING (272) 44
    IF (273) 18 19
    THEN (274) 18 19
    ELSE (275) 19
    END_IF (276) 18 19
    WHILE (277) 20 24
    DO (278) 20 21 22 24
    END_WHILE (279) 20
    REPEAT (280) 23
    UNTIL (281) 23
    FOR (282) 21 22
    END_FOR (283) 21 22
    FROM (284) 21 22
    STEP (285) 22
    TO (286) 21 22
    SWITCH (287) 27 28
    CASE (288) 29 30
    DEFAULT (289) 28
    END_SWITCH (290) 27 28
    CLEAR_SCREEN (291) 25
    PLACE (292) 26
    OR (293) 67
    AND (294) 66
    NOT (295) 68
    LETFCURLYBRACKET (296)
    RIGHTCURLYBRACKET (297)
    DIV_ENTERA (298) 51
    CONCAT (299) 69
    EQUAL (300) 64
    NOT_EQUAL (301) 65
    MODULO (302) 55
    ASSIGNMENT (303) 31 32 39 40
    MAS_IGUAL (304) 37
    MENOS_IGUAL (305) 38
    INCREMENTO (306) 33 35
    DECREMENTO (307) 34 36
    STRING <string> (308) 46
    NUMBER <number> (309) 45
    BOOL <logic> (310)
    VARIABLE <string> (311) 21 22 31 32 33 34 35 36 37 38 42 44 57
    UNDEFINED <string> (312)
    CONSTANT <string> (313) 39 40 43 58
    BUILTIN <string> (314) 59
    UNARY (315)
    POWER (316) 56


Nonterminals, with rules where they appear

    $accept (64)
        on left: 0
    program <prog> (65)
        on left: 1
        on right: 0
    stmtlist <stmts> (66)
        on left: 2 3 4
        on right: 1 3 4 18 19 20 21 22 23 24 28 29 30
    stmt <st> (67)
        on left: 5 6 7 8 9 10 11 12 13 14 15 16
        on right: 3
    controlSymbol (68)
        on left: 17
        on right: 18 19 20 21 22 23 24
    if <st> (69)
        on left: 18 19
        on right: 9
    while <st> (70)
        on left: 20
        on right: 10
    for_stmt <st> (71)
        on left: 21 22
        on right: 11
    repeat <st> (72)
        on left: 23
        on right: 12
    do_while <st> (73)
        on left: 24
        on right: 13
    clear_screen <st> (74)
        on left: 25
        on right: 14
    place <st> (75)
        on left: 26
        on right: 15
    switch_stmt <st> (76)
        on left: 27 28
        on right: 16
    case_list <st> (77)
        on left: 29 30
        on right: 27 28 29
    asgn <st> (78)
        on left: 31 32 33 34 35 36 37 38 39 40
        on right: 6 32 40
    print <st> (79)
        on left: 41
        on right: 7
    read <st> (80)
        on left: 42 43 44
        on right: 8
    exp <expNode> (81)
        on left: 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70
        on right: 18 19 20 21 22 23 24 26 27 28 29 30 31 37 38 39 41 47 48 49 50 51 52 53 54 55 56 60 61 62 63 64 65 66 67 68 69 70 72 74
    listOfExp <parameters> (82)
        on left: 71 72
        on right: 59
    restOfListOfExp <parameters> (83)
        on left: 73 74
        on right: 72 74


State 0

    0 $accept: • program $end

    $default  reduce using rule 2 (stmtlist)

    program   go to state 1
    stmtlist  go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    1 program: stmtlist •
    3 stmtlist: stmtlist • stmt
    4         | stmtlist • error

    error         shift, and go to state 4
    SEMICOLON     shift, and go to state 5
    PRINT         shift, and go to state 6
    READ          shift, and go to state 7
    READ_STRING   shift, and go to state 8
    IF            shift, and go to state 9
    WHILE         shift, and go to state 10
    DO            shift, and go to state 11
    REPEAT        shift, and go to state 12
    FOR           shift, and go to state 13
    SWITCH        shift, and go to state 14
    CLEAR_SCREEN  shift, and go to state 15
    PLACE         shift, and go to state 16
    INCREMENTO    shift, and go to state 17
    DECREMENTO    shift, and go to state 18
    VARIABLE      shift, and go to state 19
    CONSTANT      shift, and go to state 20

    $end  reduce using rule 1 (program)

    stmt          go to state 21
    if            go to state 22
    while         go to state 23
    for_stmt      go to state 24
    repeat        go to state 25
    do_while      go to state 26
    clear_screen  go to state 27
    place         go to state 28
    switch_stmt   go to state 29
    asgn          go to state 30
    print         go to state 31
    read          go to state 32


State 3

    0 $accept: program $end •

    $default  accept


State 4

    4 stmtlist: stmtlist error •

    $default  reduce using rule 4 (stmtlist)


State 5

    5 stmt: SEMICOLON •

    $default  reduce using rule 5 (stmt)


State 6

   41 print: PRINT • exp

    LPAREN    shift, and go to state 33
    PLUS      shift, and go to state 34
    MINUS     shift, and go to state 35
    NOT       shift, and go to state 36
    STRING    shift, and go to state 37
    NUMBER    shift, and go to state 38
    VARIABLE  shift, and go to state 39
    CONSTANT  shift, and go to state 40
    BUILTIN   shift, and go to state 41

    exp  go to state 42


State 7

   42 read: READ • LPAREN VARIABLE RPAREN
   43     | READ • LPAREN CONSTANT RPAREN

    LPAREN  shift, and go to state 43


State 8

   44 read: READ_STRING • LPAREN VARIABLE RPAREN

    LPAREN  shift, and go to state 44


State 9

   18 if: IF • controlSymbol exp THEN stmtlist END_IF
   19   | IF • controlSymbol exp THEN stmtlist ELSE stmtlist END_IF

    $default  reduce using rule 17 (controlSymbol)

    controlSymbol  go to state 45


State 10

   20 while: WHILE • controlSymbol exp DO stmtlist END_WHILE

    $default  reduce using rule 17 (controlSymbol)

    controlSymbol  go to state 46


State 11

   24 do_while: DO • controlSymbol stmtlist WHILE exp SEMICOLON

    $default  reduce using rule 17 (controlSymbol)

    controlSymbol  go to state 47


State 12

   23 repeat: REPEAT • controlSymbol stmtlist UNTIL exp SEMICOLON

    $default  reduce using rule 17 (controlSymbol)

    controlSymbol  go to state 48


State 13

   21 for_stmt: FOR • controlSymbol VARIABLE FROM exp TO exp DO stmtlist END_FOR
   22         | FOR • controlSymbol VARIABLE FROM exp TO exp STEP exp DO stmtlist END_FOR

    $default  reduce using rule 17 (controlSymbol)

    controlSymbol  go to state 49


State 14

   27 switch_stmt: SWITCH • LPAREN exp RPAREN case_list END_SWITCH
   28            | SWITCH • LPAREN exp RPAREN case_list DEFAULT stmtlist END_SWITCH

    LPAREN  shift, and go to state 50


State 15

   25 clear_screen: CLEAR_SCREEN • SEMICOLON

    SEMICOLON  shift, and go to state 51


State 16

   26 place: PLACE • LPAREN exp COMMA exp RPAREN SEMICOLON

    LPAREN  shift, and go to state 52


State 17

   33 asgn: INCREMENTO • VARIABLE

    VARIABLE  shift, and go to state 53


State 18

   34 asgn: DECREMENTO • VARIABLE

    VARIABLE  shift, and go to state 54


State 19

   31 asgn: VARIABLE • ASSIGNMENT exp
   32     | VARIABLE • ASSIGNMENT asgn
   35     | VARIABLE • INCREMENTO
   36     | VARIABLE • DECREMENTO
   37     | VARIABLE • MAS_IGUAL exp
   38     | VARIABLE • MENOS_IGUAL exp

    ASSIGNMENT   shift, and go to state 55
    MAS_IGUAL    shift, and go to state 56
    MENOS_IGUAL  shift, and go to state 57
    INCREMENTO   shift, and go to state 58
    DECREMENTO   shift, and go to state 59


State 20

   39 asgn: CONSTANT • ASSIGNMENT exp
   40     | CONSTANT • ASSIGNMENT asgn

    ASSIGNMENT  shift, and go to state 60


State 21

    3 stmtlist: stmtlist stmt •

    $default  reduce using rule 3 (stmtlist)


State 22

    9 stmt: if •

    $default  reduce using rule 9 (stmt)


State 23

   10 stmt: while •

    $default  reduce using rule 10 (stmt)


State 24

   11 stmt: for_stmt •

    $default  reduce using rule 11 (stmt)


State 25

   12 stmt: repeat •

    $default  reduce using rule 12 (stmt)


State 26

   13 stmt: do_while •

    $default  reduce using rule 13 (stmt)


State 27

   14 stmt: clear_screen •

    $default  reduce using rule 14 (stmt)


State 28

   15 stmt: place •

    $default  reduce using rule 15 (stmt)


State 29

   16 stmt: switch_stmt •

    $default  reduce using rule 16 (stmt)


State 30

    6 stmt: asgn • SEMICOLON

    SEMICOLON  shift, and go to state 61


State 31

    7 stmt: print • SEMICOLON

    SEMICOLON  shift, and go to state 62


State 32

    8 stmt: read • SEMICOLON

    SEMICOLON  shift, and go to state 63


State 33

   52 exp: LPAREN • exp RPAREN

    LPAREN    shift, and go to state 33
    PLUS      shift, and go to state 34
    MINUS     shift, and go to state 35
    NOT       shift, and go to state 36
    STRING    shift, and go to state 37
    NUMBER    shift, and go to state 38
    VARIABLE  shift, and go to state 39
    CONSTANT  shift, and go to state 40
    BUILTIN   shift, and go to state 41

    exp  go to state 64


State 34

   53 exp: PLUS • exp

    LPAREN    shift, and go to state 33
    PLUS      shift, and go to state 34
    MINUS     shift, and go to state 35
    NOT       shift, and go to state 36
    STRING    shift, and go to state 37
    NUMBER    shift, and go to state 38
    VARIABLE  shift, and go to state 39
    CONSTANT  shift, and go to state 40
    BUILTIN   shift, and go to state 41

    exp  go to state 65


State 35

   54 exp: MINUS • exp

    LPAREN    shift, and go to state 33
    PLUS      shift, and go to state 34
    MINUS     shift, and go to state 35
    NOT       shift, and go to state 36
    STRING    shift, and go to state 37
    NUMBER    shift, and go to state 38
    VARIABLE  shift, and go to state 39
    CONSTANT  shift, and go to state 40
    BUILTIN   shift, and go to state 41

    exp  go to state 66


State 36

   68 exp: NOT • exp

    LPAREN    shift, and go to state 33
    PLUS      shift, and go to state 34
    MINUS     shift, and go to state 35
    NOT       shift, and go to state 36
    STRING    shift, and go to state 37
    NUMBER    shift, and go to state 38
    VARIABLE  shift, and go to state 39
    CONSTANT  shift, and go to state 40
    BUILTIN   shift, and go to state 41

    exp  go to state 67


State 37

   46 exp: STRING •

    $default  reduce using rule 46 (exp)


State 38

   45 exp: NUMBER •

    $default  reduce using rule 45 (exp)


State 39

   57 exp: VARIABLE •

    $default  reduce using rule 57 (exp)


State 40

   58 exp: CONSTANT •

    $default  reduce using rule 58 (exp)


State 41

   59 exp: BUILTIN • LPAREN listOfExp RPAREN

    LPAREN  shift, and go to state 68


State 42

   41 print: PRINT exp •
   47 exp: exp • PLUS exp
   48    | exp • MINUS exp
   49    | exp • MULTIPLICATION exp
   50    | exp • DIVISION exp
   51    | exp • DIV_ENTERA exp
   55    | exp • MODULO exp
   56    | exp • POWER exp
   60    | exp • GREATER_THAN exp
   61    | exp • GREATER_OR_EQUAL exp
   62    | exp • LESS_THAN exp
   63    | exp • LESS_OR_EQUAL exp
   64    | exp • EQUAL exp
   65    | exp • NOT_EQUAL exp
   66    | exp • AND exp
   67    | exp • OR exp
   69    | exp • CONCAT exp
   70    | exp • '?' exp ':' exp

    PLUS              shift, and go to state 69
    MINUS             shift, and go to state 70
    MULTIPLICATION    shift, and go to state 71
    DIVISION          shift, and go to state 72
    GREATER_THAN      shift, and go to state 73
    LESS_THAN         shift, and go to state 74
    GREATER_OR_EQUAL  shift, and go to state 75
    LESS_OR_EQUAL     shift, and go to state 76
    OR                shift, and go to state 77
    AND               shift, and go to state 78
    DIV_ENTERA        shift, and go to state 79
    CONCAT            shift, and go to state 80
    EQUAL             shift, and go to state 81
    NOT_EQUAL         shift, and go to state 82
    MODULO            shift, and go to state 83
    '?'               shift, and go to state 84
    POWER             shift, and go to state 85

    $default  reduce using rule 41 (print)


State 43

   42 read: READ LPAREN • VARIABLE RPAREN
   43     | READ LPAREN • CONSTANT RPAREN

    VARIABLE  shift, and go to state 86
    CONSTANT  shift, and go to state 87


State 44

   44 read: READ_STRING LPAREN • VARIABLE RPAREN

    VARIABLE  shift, and go to state 88


State 45

   18 if: IF controlSymbol • exp THEN stmtlist END_IF
   19   | IF controlSymbol • exp THEN stmtlist ELSE stmtlist END_IF

    LPAREN    shift, and go to state 33
    PLUS      shift, and go to state 34
    MINUS     shift, and go to state 35
    NOT       shift, and go to state 36
    STRING    shift, and go to state 37
    NUMBER    shift, and go to state 38
    VARIABLE  shift, and go to state 39
    CONSTANT  shift, and go to state 40
    BUILTIN   shift, and go to state 41

    exp  go to state 89


State 46

   20 while: WHILE controlSymbol • exp DO stmtlist END_WHILE
